--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>QR code</title>
+    <title>QR CODE</title>
 </head>
 <body style="background-color: gainsboro;">
+<div class="originaldiv">
+<div class="imagediv">
+<img src="images/image-qr-code.png" alt="QR code" width="85%">
+</div>
+<div class="firstdiv"> 
+   <h1>Improve your front-end <br> skills by building projects </h1>
+</div>
+<div class="seconddiv">
+   <p> Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
+</div>
+</div>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>QR CODE</title>
+</head>
+<body style="background-color: rgb(61, 17, 136);">
 <div class="originaldiv">
 <div class="imagediv">
 <img src="images/image-qr-code.png" alt="QR code" width="85%">
